# vectorworks-mcp

./: .gitignore  .mcp.json  .vectorworks-mcp-contract.json  AGENTS.md  AGENT_INSTALL.md  CLAUDE.md  CODEX.md  INSTALL_ISSUES.md  README.md  install.ps1  pyproject.toml  requirements.txt  server.py  vw_listener.py
.claude-plugin/: marketplace.json
.github/workflows/: verify.yml
native_bridge/: ACCEPTANCE.md  HANDLER_MATRIX.md  PROTOCOL.md  README.md  SDK_REQUIREMENTS.json  smoke.py
native_bridge/mock/: README.md  mock_bridge.py
native_bridge/src/: BridgeDispatcher.hpp  BridgeProtocol.cpp  BridgeProtocol.hpp  CadRequestQueue.hpp  NativeTransport.cpp  NativeTransport.hpp  README.md  StdAfx.h  VectorworksMCPBridge.cpp
native_bridge/tests/: native_scaffold_smoke.cpp
plugins/vectorworks/: .mcp.json
scripts/: bootstrap-agent.ps1  bootstrap-claude-code.ps1  bootstrap-native-bridge.ps1  build-native-bridge.ps1  check-bundled-plugin-contract.ps1  check-native-bridge-prereqs.ps1  copy-native-bridge-scaffold.ps1  copy-vectorworks-loader.ps1  doctor-native-bridge.ps1  doctor-vectorworks-mcp.ps1  invoke-native-bridge-next.ps1  prepare-native-bridge-source.ps1  register-claude-code.ps1  run-mcp-server.ps1  smoke-native-bridge.ps1  start-vectorworks-native-smoke.ps1  test-native-bridge-scaffold.ps1  test-vectorworks-listener.ps1  verify-no-vectorworks.ps1  wire-native-bridge-project.ps1
tests/: test_agent_readiness.py  test_claude_plugin.py  test_listener_protocol.py  test_mcp_stdio_contract.py  test_native_bridge_contract.py  test_server_protocol.py
(+25 files in other folders)
